--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.20",
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,14 +14,21 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-scroll": "^1.8.3",
+    "@types/react-svg-radar-chart": "^1.2.3",
+    "apexcharts": "^3.27.3",
+    "apollo": "^2.33.4",
     "autoprefixer": "^10.2.6",
     "graphql": "^15.5.1",
     "postcss": "^8.3.5",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
+    "react-svg-radar-chart": "^1.3.0",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
@@ -27,6 +36,7 @@
   "scripts": {
     "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/style.css",
     "start": "npm run tailwind:build & react-scripts start",
+    "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
