--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/style.css",
     "start": "npm run tailwind:build & react-scripts start",
     "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
+    "prebuild": "npm run tailwind:build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
