--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/style.css",
+    "tailwind:build": "NODE_ENV=production tailwind build ./src/styles/tailwind.css -o ./src/styles/style.css",
     "start": "npm run tailwind:build & react-scripts start",
     "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
     "build": "CI=false react-scripts build",
