--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "tailwind:prodbuild": "NODE_ENV=production npm run tailwind:build",
     "tailwind:build": "NODE_ENV=production tailwind build ./src/styles/tailwind.css -o ./src/styles/style.css",
     "start": "npm run tailwind:build & react-scripts start",
     "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
