--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@apollo/client": "^3.3.20",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/forms": "^0.3.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -23,13 +25,19 @@
     "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-hook-form": "^7.9.0",
+    "react-player": "^2.9.0",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
+    "react-slick": "^0.28.1",
     "react-svg-radar-chart": "^1.3.0",
+    "react-youtube": "^7.13.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
@@ -61,5 +69,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.5"
   }
 }
