--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-apexcharts": "^1.3.9",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.0.9",
+    "react-helmet-async": "^1.1.2",
     "react-hook-form": "^7.9.0",
     "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.21",
@@ -37,6 +37,7 @@
     "react-slick": "^0.28.1",
     "react-svg-radar-chart": "^1.3.0",
     "react-youtube": "^7.13.1",
+    "rimraf": "^3.0.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.4",
@@ -45,8 +46,8 @@
   "scripts": {
     "tailwind:prodbuild": "NODE_ENV=production npm run tailwind:build",
     "tailwind:build": "NODE_ENV=production tailwind build ./src/styles/tailwind.css -o ./src/styles/style.css",
-    "start": "npm run tailwind:build & react-scripts start",
-    "apollo:codegen": "apollo client:codegen src/__generated__ --target=typescript --outputFlat",
+    "start": "npm run apollo:codegen & npm run tailwind:build & react-scripts start",
+    "apollo:codegen": "rimraf src/__generated__ && apollo client:codegen src/__generated__ --target=typescript --outputFlat",
     "build": "CI=false react-scripts build",
     "prebuild": "npm run tailwind:build",
     "test": "react-scripts test",
