--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/react-scroll": "^1.8.3",
     "@types/react-svg-radar-chart": "^1.2.3",
+    "@types/styled-components": "^5.1.13",
     "apexcharts": "^3.27.3",
     "apollo": "^2.33.4",
     "autoprefixer": "^10.2.6",
@@ -39,6 +40,7 @@
     "react-youtube": "^7.13.1",
     "rimraf": "^3.0.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.1",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
