--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rimraf": "^3.0.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
+    "subscriptions-transport-ws": "^0.9.19",
     "tailwindcss": "^2.2.4",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
