--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-apexcharts": "^1.3.9",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.1.2",
     "react-hook-form": "^7.9.0",
     "react-player": "^2.9.0",
