--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
+    "react-summernote": "^2.0.2",
     "react-svg-radar-chart": "^1.3.0",
     "react-tinder-card": "^1.4.0",
     "react-youtube": "^7.13.1",
@@ -51,7 +52,7 @@
   "scripts": {
     "tailwind:prodbuild": "NODE_ENV=production npm run tailwind:build",
     "tailwind:build": "NODE_ENV=production tailwind build ./src/styles/tailwind.css -o ./src/styles/style.css",
-    "start": "npm run tailwind:build & react-scripts start",
+    "start": "npm run apollo:codegen & npm run tailwind:build & react-scripts start",
     "apollo:codegen": "rimraf src/__generated__ && apollo client:codegen src/__generated__ --target=typescript --outputFlat",
     "build": "CI=false react-scripts build",
     "prebuild": "npm run tailwind:build",
