--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.11.0",
     "react-summernote": "^2.0.2",
     "react-svg-radar-chart": "^1.3.0",
     "react-tinder-card": "^1.4.0",
