--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "apexcharts": "^3.27.3",
     "apollo": "^2.33.4",
     "autoprefixer": "^10.2.6",
+    "axios": "^0.26.0",
     "graphql": "^15.5.1",
     "postcss": "^8.3.5",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^2.1.2",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -53,7 +55,7 @@
   "scripts": {
     "tailwind:prodbuild": "NODE_ENV=production npm run tailwind:build",
     "tailwind:build": "NODE_ENV=production tailwind build ./src/styles/tailwind.css -o ./src/styles/style.css",
-    "start": " npm run tailwind:build & react-scripts start",
+    "start": "npm run tailwind:build & react-scripts start",
     "apollo:codegen": "rimraf src/__generated__ && apollo client:codegen src/__generated__ --target=typescript --outputFlat",
     "build": "CI=false react-scripts build",
     "prebuild": "npm run tailwind:build",
